force-app/main/default/objects/Change__c/Change__c.object-meta.xml
<CustomObject>
    <description>Site enhancements/fixes that require development or configuration, and ultimately, deployment to production.</description>
    <label>Change</label>
    <nameField>
        <displayFormat>Change-{0000000}</displayFormat>
        <label>Change Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Changes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>