force-app/main/default/objects/Change__c/fields/Communications_Review_Needed__c.field-meta.xml
<CustomField>
    <fullName>Communications_Review_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if Corp Comm/Legal needs to review this item before completion.</description>
    <inlineHelpText>Check this box if Corp Comm/Legal needs to review this item before completion.</inlineHelpText>
    <label>Communications Review Needed</label>
    <type>Checkbox</type>
</CustomField>