force-app/main/default/objects/Change__c/fields/Deployment_Components__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Components__c</fullName>
    <defaultValue>&quot;NOTE: Security and accessibility permissions for any new fields or objects will need to be edited after deployment.&quot;</defaultValue>
    <description>What is this change set comprised of?</description>
    <inlineHelpText>What is this change set comprised of?</inlineHelpText>
    <label>Deployment Components</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>