force-app/main/default/objects/Change__c/fields/Emergency_Change__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This change was built and tested in dev and promoted to PRD to fix a user-facing problem.  It should then be tested and promoted from QA to keep the environments in sync and to follow the normal process</description>
    <inlineHelpText>This change was built and tested in dev and promoted to PRD to fix a user-facing problem.  It should then be tested and promoted from QA to keep the environments in sync and to follow the normal process</inlineHelpText>
    <label>Emergency Change</label>
    <type>Checkbox</type>
</CustomField>