force-app/main/default/objects/Change__c/fields/Explanation__c.field-meta.xml
<CustomField>
    <fullName>Explanation__c</fullName>
    <description>Details regarding this change.  Why is it necessary?</description>
    <inlineHelpText>Details regarding this change.  Why is it necessary?</inlineHelpText>
    <label>Explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>