force-app/main/default/objects/Change__c/fields/How_to_Test__c.field-meta.xml
<CustomField>
    <fullName>How_to_Test__c</fullName>
    <description>How should this be tested?  What pages, actions should the QA team take to validate?</description>
    <inlineHelpText>How should this be tested?  What pages, actions should the QA team take to validate?</inlineHelpText>
    <label>How to Test</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>