force-app/main/default/objects/Change__c/fields/Internal_Only__c.field-meta.xml
<CustomField>
    <fullName>Internal_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this change only for internal admin, customer service, communications, etc. use?  Does this change affect the application?</description>
    <inlineHelpText>Is this change only for internal admin, customer service, communications, etc. use?  Does this change affect the application?</inlineHelpText>
    <label>Internal Only/Outside of Application</label>
    <type>Checkbox</type>
</CustomField>