force-app/main/default/objects/Change__c/fields/No_Code__c.field-meta.xml
<CustomField>
    <fullName>No_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does this change require a change to code for the applicaiton?</description>
    <inlineHelpText>Does this change require a change to code for the applicaiton?</inlineHelpText>
    <label>No Code</label>
    <type>Checkbox</type>
</CustomField>