force-app/main/default/objects/Change__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <description>Who requested this change?</description>
    <inlineHelpText>Who requested this change?</inlineHelpText>
    <label>Requested By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>