force-app/main/default/objects/Change__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>What stage of deployment is this change in?</description>
    <inlineHelpText>What stage of deployment is this change in?</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Backlog</fullName>
                <default>true</default>
                <label>Backlog</label>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Code Review</fullName>
            </value>
            <value>
                <fullName>Deploy to QA</fullName>
            </value>
            <value>
                <fullName>QA Approve</fullName>
            </value>
            <value>
                <fullName>Communications Review</fullName>
            </value>
            <value>
                <fullName>Upload to PRD/Comm Review</fullName>
            </value>
            <value>
                <fullName>Deploy to PRD</fullName>
            </value>
            <value>
                <fullName>PRD Validation</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>