force-app/main/default/objects/Change__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Requested_By__c</columns>
    <columns>Explanation__c</columns>
    <columns>Status__c</columns>
    <columns>Deployment_Components__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>