force-app/main/default/objects/Change__c/listViews/Backlog.listView-meta.xml
<ListView>
    <fullName>Backlog</fullName>
    <columns>NAME</columns>
    <columns>No_Code__c</columns>
    <columns>Requested_By__c</columns>
    <columns>Explanation__c</columns>
    <columns>Status__c</columns>
    <columns>Deployment_Components__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Backlog</value>
    </filters>
    <label>1. Backlog/Not yet in Development</label>
</ListView>