force-app/main/default/objects/Change__c/listViews/Code_Review.listView-meta.xml
<ListView>
    <fullName>Code_Review</fullName>
    <columns>NAME</columns>
    <columns>Requested_By__c</columns>
    <columns>Explanation__c</columns>
    <columns>Status__c</columns>
    <columns>Deployment_Components__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Code Review</value>
    </filters>
    <label>3. Code Review</label>
</ListView>