force-app/main/default/objects/Change__c/listViews/Complete.listView-meta.xml
<ListView>
    <fullName>Complete</fullName>
    <columns>NAME</columns>
    <columns>Requested_By__c</columns>
    <columns>Explanation__c</columns>
    <columns>Status__c</columns>
    <columns>Deployment_Components__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </filters>
    <label>9. Change Complete</label>
</ListView>