force-app/main/default/objects/Change__c/listViews/Deploy_to_PRD.listView-meta.xml
<ListView>
    <fullName>Deploy_to_PRD</fullName>
    <columns>NAME</columns>
    <columns>Requested_By__c</columns>
    <columns>Explanation__c</columns>
    <columns>Status__c</columns>
    <columns>Deployment_Components__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Deploy to PRD</value>
    </filters>
    <label>7. Ready for PRD Deployment</label>
</ListView>