force-app/main/default/objects/Change__c/listViews/Development.listView-meta.xml
<ListView>
    <fullName>Development</fullName>
    <columns>NAME</columns>
    <columns>Requested_By__c</columns>
    <columns>Explanation__c</columns>
    <columns>Status__c</columns>
    <columns>Deployment_Components__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Development</value>
    </filters>
    <label>2. In Development</label>
</ListView>