force-app/main/default/objects/Change__c/listViews/Not_complete.listView-meta.xml
<ListView>
    <fullName>Not_complete</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Explanation__c</columns>
    <columns>Deployment_Components__c</columns>
    <columns>No_Code__c</columns>
    <columns>Internal_Only__c</columns>
    <columns>How_to_Test__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Complete,Backlog</value>
    </filters>
    <label>Not complete</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>