force-app/main/default/objects/Change__c/listViews/PRD_Validation.listView-meta.xml
<ListView>
    <fullName>PRD_Validation</fullName>
    <columns>NAME</columns>
    <columns>Requested_By__c</columns>
    <columns>Explanation__c</columns>
    <columns>Status__c</columns>
    <columns>Deployment_Components__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>PRD Validation</value>
    </filters>
    <label>8. PRD Validation</label>
</ListView>