force-app/main/default/objects/Change__c/listViews/QA_Approval.listView-meta.xml
<ListView>
    <fullName>QA_Approval</fullName>
    <columns>NAME</columns>
    <columns>Requested_By__c</columns>
    <columns>Explanation__c</columns>
    <columns>Status__c</columns>
    <columns>Deployment_Components__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>QA Approve</value>
    </filters>
    <label>5. Needs QA Approval</label>
</ListView>