force-app/main/default/objects/Change__c/listViews/QA_Deployment.listView-meta.xml
<ListView>
    <fullName>QA_Deployment</fullName>
    <columns>NAME</columns>
    <columns>Requested_By__c</columns>
    <columns>Explanation__c</columns>
    <columns>Status__c</columns>
    <columns>Deployment_Components__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Deploy to QA</value>
    </filters>
    <label>4. Ready for QA Deployment</label>
</ListView>